# spectre-toy

./: .clang-format  .gitignore  CMakeLists.txt  conanfile.txt  main.cpp
src/: main.cpp
tests/: CMakeLists.txt
